---------------------------------------------------------------------------------------------------
Version: 17.0.8
Date: 2020-01-xx
  Features:
  Changes:
  Bugfixes:
    - "add_random_tile_based_tree_near_position" remote call didn't link to a valid function name before.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.7
Date: 2020-01-04
  Features:
  Changes:
  Bugfixes:
    - Burning Tree reincarnation logic fixed to actually work
    - Fix multiple setting changes stacking rather than being re-calculated
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.6
Date: 2019-12-14
  Features:
    - New features and changes to improve UPS on very high biter death maps
    - Added max concurrent reincarnations and reincarnation queue system with mod settings.
  Changes:
    - Removed anti fire spread option & code as offerign it was causing big UPS issues when very high concurrent number of biters were being damaged. Use max fire spread option or limit chance of reincarnation into burning trees to prevent massive forest fires.
  Bugfixes:
  Info:
    - Uses event filter to reduce Entity Damaged calls
    - Restructure code to my modern style & utility functions
---------------------------------------------------------------------------------------------------
Version: 17.0.5
Date: 2019-11-23
  Features:
  Changes:
  Bugfixes:
    - out-of-map (void) tile is handled without soft error warnings
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.4
Date: 2019-06-24
  Features:
  Changes:
  Bugfixes:
    - Changed to work with mods that add new trees without autoplace settings. May no longer error with special mods that do their own map generation, but won't put the expected trees either.