@@ -5,6 +5,7 @@ Date: 2020-01-xx
   Changes:
   Bugfixes:
     - "add_random_tile_based_tree_near_position" remote call didn't link to a valid function name before.
+    - fixed desync caused when other mods utilised the remote interface of this mod. Was incorrectly registered causing speradic availability.
   Info:
 ---------------------------------------------------------------------------------------------------
 Version: 17.0.7
